--- a/style.css
+++ b/style.css
@@ -3,21 +3,38 @@
 body {
     margin: 0;
     padding: 0;
-    
+    width: 100%;
 }
 
 .container {
-    width: 100%;
+    max-width: 100% !important;
     height: 100vh;
-    margin: 0;
-    padding-left: 0;
-    padding-right: 0;
+    margin: 0 0 !important;
+    padding: 0 0 !important;
     display: flex;
     align-items: center;
     justify-content: center;
     background: url(images/Logo\ Rose\ Illustration\ Mains\ Ongles.png) no-repeat center;
     background-color: #F5EFEF;
     font-family: "Open Sans";
+}
+
+.title h1 {
+    font-size: 42px;
+    text-align: center;
+    margin-bottom: 25px;
+    color: #eccfd1;
+}
+
+.title {
+    margin-bottom: 35px;
+}
+
+.title hr {
+    width: 70%;
+    margin: auto;
+    color: #eccfd1;
+
 }
 
 /* Data Input */
@@ -33,7 +50,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.3);
     display: flex;
     flex-direction: column;
-    padding: 2%;
+    padding: 5%;
 }
 
 .input-data {
@@ -51,8 +68,16 @@ body {
     align-items: center;
 }
 
+.inputs hr {
+    padding: 0;
+    margin: 0;
+    width: 80%;
+    color: rgba(103, 44, 102, 0.589);
+    ;
+}
+
 label {
-    font-size: large;
+    font-size: larger;
     letter-spacing: 2px;
     font-weight: 700;
     color: rgba(103, 44, 102, 0.589);
