--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 .inputs hr {
     padding: 0;
     margin: 0;
-    width: 80%;
+    width: 40px;
     color: rgba(103, 44, 102, 0.589);
     ;
 }
@@ -87,11 +87,12 @@ input {
     width: 40%;
     background: rgba(255, 255, 255, 0.7);
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(103, 44, 102, 0.589);
+    box-shadow: 0 4px 10px rgba(103, 44, 102, 0.589);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     padding: 3%;
+    text-align: right;
 }
 
 
