--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ input {
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 3%;
+    padding: 1% 3%;
     text-align: right;
 }
 
