--- a/style.css
+++ b/style.css
@@ -109,3 +109,35 @@ input {
     justify-content: center;
     align-items: center;
 }
+
+
+.error-message {
+    width: 50%;
+    height: 50%;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid red;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 5%;
+    text-align: center;
+    color: red;
+    position: absolute;
+    z-index: 100;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+
+
+@media (min-width: 1000px) {
+    input {
+        width: 20%;
+    }
+}
