--- a/style.css
+++ b/style.css
@@ -113,8 +113,8 @@ input {
 
 .error-message {
     width: 50%;
-    height: 50%;
-    background: rgba(255, 255, 255, 0.2);
+    height: 40%;
+    background: cover;
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
@@ -124,7 +124,6 @@ input {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 5%;
     text-align: center;
     color: red;
     position: absolute;
@@ -133,6 +132,23 @@ input {
     left: 50%;
     transform: translate(-50%, -50%);
     
+}
+
+.error-message h1 {
+    position: absolute;
+}
+
+.error-message img {
+    border-radius: 16px;
+    width: 100%;
+    height: 100%;
+}
+
+button {
+    color: rgba(103, 44, 102, 0.589) !important;
+    border-color: rgba(103, 44, 102, 0.589) !important;
+    box-shadow: 0 0px 20px rgba(103, 44, 102, 0.2);
+
 }
 
 
